--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "demo-electron",
   "version": "0.1.0",
   "private": true,
+  "description": "demo app",
+  "author": "wugenshui",
   "scripts": {
     "serve": "vue-cli-service electron:serve",
     "build": "vue-cli-service electron:build",
@@ -13,22 +15,22 @@
   },
   "main": "background.js",
   "dependencies": {
-    "vue": "~2.6.12",
-    "vue-router": "~3.5.1",
-    "vuex": "~3.6.2"
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/cli-plugin-router": "~4.5.13",
-    "@vue/cli-plugin-vuex": "~4.5.13",
-    "@vue/cli-service": "~4.5.13",
-    "electron": "~12.0.7",
-    "electron-devtools-installer": "~3.2.0",
-    "eslint": "~6.8.0",
-    "eslint-plugin-vue": "~6.2.2",
-    "sass": "~1.32.12",
-    "sass-loader": "~8.0.2",
-    "vue-cli-plugin-electron-builder": "~2.0.0",
-    "vue-template-compiler": "~2.6.12"
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-router": "^4.5.13",
+    "@vue/cli-plugin-vuex": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "electron": "^12.0.0",
+    "electron-devtools-installer": "^3.2.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.32.12",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-electron-builder": "^2.0.0",
+    "vue-template-compiler": "^2.6.12"
   }
 }
